--- a/browser/js/admin/admin.users.template.html
+++ b/browser/js/admin/admin.users.template.html
@@ -1,15 +1,20 @@
 <div class="admin-users">
-   <ul>
-     <li ng-repeat="user in users">
-     <p>email{{ user.email}}</p>
-     <p>orders{{user.orders}}</p>
-     <p>wishlit{{user.wishlist}}</p>
-     <p>billing{{user.billing}}</p>
-     <p>shipping{{user.shipping}}</p>
-     <p>reviews{{user.reviews}}</p>
-     <p>isAdmin {{user.isAdmin}}</p>
-      <input ng-click="toAdmin(user, user.isAdmin)" type="checkbox" ng-checked="user.isAdmin"></input>
-      <button ng-click="removeUser(user)">Delete User</button>
-      </li>
-   </ul>
+   <table class="table">
+    <tr>
+      <td>Email</td>
+      <td>Orders</td>
+      <td>Wishlists</td>
+      <td>Reviews</td>
+      <td>Administrator</td>
+      <td>Remove User</td>
+    </tr>
+     <tr ng-repeat="user in users">
+     <td>l{{ user.email}}</td>
+     <td>{{user.orders.length}}</td>
+     <td>{{user.wishlist.length || 0}}</td>
+     <td>{{user.reviews.length}}</td>
+      <td><input ng-click="toAdmin(user, user.isAdmin)" type="checkbox" ng-checked="user.isAdmin"></input></td>
+      <td><button class="btn btn-danger" ng-click="removeUser(user)">Delete User</button></td>
+      </tr>
+   </table>
 </div>
