--- a/browser/js/admin/admin.orders.template.html
+++ b/browser/js/admin/admin.orders.template.html
@@ -11,10 +11,10 @@
     <li ng-repeat="order in orders | filter: orderState">
      <p><strong>Date Ordered: </strong> {{ order.orderDate}}</p>
      <p><strong>Order Status: </strong>{{order.status}}</p>
-      <button class="btn btn-default" ng-hide="order.status === 'pending'" ng-click="setStatus(order, 'pending')">Pending</button>
-        <button  class="btn btn-default" ng-hide="order.status === 'shipping'" ng-click="setStatus(order, 'shipping')">Shipping</button>
-        <button  class="btn btn-default" ng-hide="order.status === 'cancelled'" ng-click="setStatus(order, 'cancelled')">Cancelled</button>
-        <button class="btn btn-default" ng-hide="order.status === 'completed'" ng-click="setStatus(order, 'completed')">Completed</button>
+      <button class="btn btn-default btn-warning" ng-hide="order.status === 'pending'" ng-click="setStatus(order, 'pending')">Pending</button>
+        <button  class="btn btn-default btn-warning" ng-hide="order.status === 'shipping'" ng-click="setStatus(order, 'shipping')">Shipping</button>
+        <button  class="btn btn-default btn-warning" ng-hide="order.status === 'cancelled'" ng-click="setStatus(order, 'cancelled')">Cancelled</button>
+        <button class="btn btn-default btn-warning" ng-hide="order.status === 'completed'" ng-click="setStatus(order, 'completed')">Completed</button>
      <div>
       <h4>Shipping Details</h4>
       <p>{{ order.shipTo.name }}</p>
