--- a/browser/js/checkout/checkout.template.html
+++ b/browser/js/checkout/checkout.template.html
@@ -6,9 +6,9 @@
       <form ng-submit="submitAddress()">
         <label class="checkout-field-label">To:</label>
         <input type="text" ng-model="address.name"/>
-        <label class="checkout-field-label">Line One</label>
+        <label class="checkout-field-label">Address Line One</label>
         <input type="text" ng-model="address.lineOne"/>
-        <label class="checkout-field-label">Line Two</label>
+        <label class="checkout-field-label">Address Line Two</label>
         <input type="text" ng-model="address.lineTwo"/>
         <label class="checkout-field-label">City</label>
         <input type="text" ng-model="address.city"/>
@@ -37,9 +37,9 @@
           <form ng-hide="false" ng-submit="submitBilling()">
             <label class="checkout-field-label">To:</label>
             <input type="text" ng-model="billing.address.name"/>
-            <label class="checkout-field-label">Line One</label>
+            <label class="checkout-field-label">Address Line One</label>
             <input type="text" ng-model="billing.address.lineOne"/>
-            <label class="checkout-field-label">Line Two</label>
+            <label class="checkout-field-label">Address Line Two</label>
             <input type="text" ng-model="billing.address.lineTwo"/>
             <label class="checkout-field-label">City</label>
             <input type="text" ng-model="billing.address.city"/>
