--- a/browser/js/common/directives/navbar/navbar.html
+++ b/browser/js/common/directives/navbar/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-static-top">
     <div id='nav' class="container">
         <div class="navbar-header">
-            <fullstack-logo></fullstack-logo>
+            <p id="satis-heading">Satis-Factory</p>
         </div>
         <ul class="nav navbar-nav">
             <li ng-repeat="item in items" ng-show="!item.auth || isLoggedIn()">
