--- a/browser/js/orders/order.html
+++ b/browser/js/orders/order.html
@@ -5,7 +5,7 @@
 	<ul class="list-group" >
 		<div style="text-align: center">
 		<li class="list-group-item" id="sell" ng-repeat="item in order.items">
-			<img class="thumbnail" src={{item.product.photo}} />
+			<img class="thumbnail" ng-src={{item.product.photo}} />
 			<h2 class="list-text">{{item.product.title}}</h2><h2 >Price: {{item.price | currency}}</h2><h2>Qty: {{item.quantity}}</h2>
 
 			 <button class="btn btn-danger" ng-click="removeFromOrder(item)"><span class="glyphicon glyphicon-thumbs-down"></span> Remove Item</button>
