added github link

--- a/browser/js/common/directives/search/search.template.html
+++ b/browser/js/common/directives/search/search.template.html
@@ -10,5 +10,6 @@
       		<p class="search-results" ng-show="search" ng-click="seeProduct(product)">{{product.title}}</p>
       	</div>
     </form>
+    <a href="http://github.com/zelias500/satisfactory">GitHub</a>
   </div>
 </section>
