Finished fixing stuff.

--- a/browser/js/confirmation/confirmation.template.html
+++ b/browser/js/confirmation/confirmation.template.html
@@ -1,8 +1,8 @@
-<!-- <div>
-<audio id="song" src="satisfaction.mp3" autoplay="true" controls="controls">
-</div> -->
+<div style="display: none">
+<audio src="satisfaction.mp3" autoplay="true" controls="controls">
+</div>
 <div class="confirm">
-<h2>Thank you for your order!</h2>
+<h2 class="satisfy-font">Thank you for your order!</h2>
 <p>Your confirmation number is: {{confirmNum}}<p>
 <p> We hope you will be SATIS-FIED  <span class="glyphicon glyphicon-thumbs-up"></span></p>
 </div>
